add_subdirectory(example_01)
add_subdirectory(example_02)
add_subdirectory(example_03)
add_subdirectory(example_04)
add_subdirectory(example_05)
add_subdirectory(example_06)
add_subdirectory(example_07)
add_subdirectory(example_08)
add_subdirectory(example_09)
add_subdirectory(tuiMain)
add_subdirectory(tuiTest)
